<resources>
    <string name="app_name">BYOB</string>
    <string name="barista_picks">Barista Picks</string>
    <string name="customize">Customize</string>
    <string name="favorites">Favorites</string>
    <string name="alex_moe">Alex Moe</string>
    <string name="override_drink">Tap To Override Current Drink</string>
    <string name="customize_drink">Tap To Begin Customizing Your Drink</string>
    <string name="alex_about">Hey guys, Alex here, better known as @themacrobarista on
        Instagram! It’s a known fact that there are tons of calories packed into the things
        we eat and drink every day. When I realized that the coffee I was drinking was loaded with sugar,
        I decided to do something about it…\n\n\n
        Over the last two years, I’ve made it my mission to put in the time and research to create more than
        100 macro-friendly coffee recipes! The best way to bring you the pictures is through my Instagram page.
        That being said, it became apparent that there was another, more user friendly way I could provide value to you.\n\n\n
        I wanted to find a way for you to Be Your Own Barista, create your own drinks, and have an organized database for all
        of your favorite recipes!\n\n\nSo without further adieu, I want to welcome you to your very own app dedicated to help
        find you the perfect drink, or even create your own! I encourage you to be creative with the tools I’m giving you! Use
        this platform to your advantage, good luck, and BYOB!
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="search_hint">drink name...</string>
    <string name="done">Done</string>
    <string name="new_drink">New Drink</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="plus">+</string>
    <string name="calories_hint">Amount of Calories</string>
    <string name="protein_hint">Amount of Protein</string>
    <string name="carbs_hint">Amount of Carbs</string>
    <string name="fats_hint">Amount of Fats</string>
    <string name="sugar_hint">Amount of Sugar</string>
    <string name="caffeine_hint">Amount of Caffeine</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="milks">Milks</string>
    <string name="calories_text">Calories: %.01fg</string>
    <string name="protein_text">Protein: %.01fg</string>
    <string name="carbs_text">Carbs: %.01fg</string>
    <string name="fat_text">Fats: %.01fg</string>
    <string name="sugar_text">Sugar: %.01fg</string>
    <string name="syrups">Syrups</string>
    <string name="extras">Extras</string>
    <string name="favorite_field_text">- %s</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Signup</string>


</resources>
