<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightTan">

    <LinearLayout
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:hint="@string/search_hint"
        android:background="@drawable/button_background"
        android:backgroundTint="@android:color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_search_black_24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:background="@android:color/transparent"
            android:hint="@string/search"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:backgroundTint="@color/tan"
        android:background="@drawable/button_background">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </androidx.recyclerview.widget.RecyclerView>

    </FrameLayout>

    <Button
        android:id="@+id/newDrinkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/new_drink"
        style="@style/ButtonAppearance"/>

    <Button
        android:id="@+id/doneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:text="@string/done"
        style="@style/ButtonAppearance"/>

</LinearLayout>