<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightTan"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/darkBrown"
        android:gravity="center"
        android:textColor="@color/lightTan"
        android:textSize="20sp"
        android:text="@string/extras">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            style="@style/ButtonAppearance"
            android:textColor="@color/lightTan"
            android:text="@string/back"
            android:backgroundTint="@color/darkBrown"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:textColor="@color/lightTan"
            android:text="@string/next"
            android:backgroundTint="@color/darkBrown"
            style="@style/ButtonAppearance"/>
    </LinearLayout>

</LinearLayout>