<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="56dp"
            android:layout_marginBottom="56dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/alex" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:text="@string/alex_about"
                    android:textColor="@color/colorPrimaryDark" />

                <ImageView
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/knine"/>

                <EditText
                    android:id="@+id/emailView"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="15dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/email"/>

                <EditText
                    android:id="@+id/passwordView"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/colorPrimaryDark"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/password"/>

                <Button
                    android:id="@+id/login"
                    android:layout_width="180dp"
                    android:layout_height="72dp"
                    style="@style/ButtonAppearance"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login"
                    android:layout_marginBottom="56dp"/>


            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</layout>